[package]
name = "iq"
version = "0.1.1"
edition = "2021"
authors = ["dystroy <denys.seguret@gmail.com>"]
repository = "https://github.com/Canop/iq"
description = "introspection with dynamic query"
keywords = ["serde", "introspection", "query"]
license = "MIT"
categories = ["parsing"] # seriously, the categories taxonomy makes no sense
readme = "README.md"
rust-version = "1.56"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
