[package]
name = "iq"
version = "0.4.0"
edition = "2021"
authors = ["dystroy <denys.seguret@gmail.com>"]
repository = "https://github.com/Canop/iq"
description = "introspection with dynamic queries"
keywords = ["serde", "introspection", "query"]
license = "MIT"
categories = ["parsing"] # seriously, the categories taxonomy makes no sense
readme = "README.md"
rust-version = "1.56"

[features]
template = ["lazy-regex"]
default = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy-regex = { version = "3", optional = true }

# https://users.rust-lang.org/t/how-to-document-optional-features-in-api-docs/64577
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
